--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-commentjson
-imageio
-numpy
-opencv-python-headless
-pybind11
-pyquaternion
-scipy
-tqdm
+## python 3.7.0
+commentjson==0.9.0
+imageio==2.31.2
+numpy==1.21.6
+opencv-python-headless==4.10.0.84
+pybind11==2.13.1
+pyquaternion==0.9.9
+scipy==1.7.3
+tqdm==4.66.5
